--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "nunjucks": "3.2.4",
     "shelljs": "0.8.5",
     "winston": "^3.11.0",
-    "winston-azure-application-insights": "^4.0.0"
+    "winston-azure-application-insights": "^4.0.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "jestSonar": {
     "reportPath": "reports",
