--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -46,19 +46,19 @@ stages:
     steps:
       - template: steps-build-and-test.yaml
       - template: steps-build-and-push-docker-images.yaml
-      - template: steps-package-and-push-helm-charts.yaml
+      # - template: steps-package-and-push-helm-charts.yaml
 
-- stage: 'Dev'
-  displayName: 'Deploy to the dev environment'
-  dependsOn: Build
-  condition:  succeeded()
-  jobs:
-  - deployment: Deploy
-    pool:
-      vmImage: 'ubuntu-latest'
-    environment: dev 
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-            - template: steps-deploy-helm-charts.yaml
+# - stage: 'Dev'
+#   displayName: 'Deploy to the dev environment'
+#   dependsOn: Build
+#   condition:  succeeded()
+#   jobs:
+#   - deployment: Deploy
+#     pool:
+#       vmImage: 'ubuntu-latest'
+#     environment: dev 
+#     strategy:
+#       runOnce:
+#         deploy:
+#           steps:
+#             - template: steps-deploy-helm-charts.yaml
