--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.sourceEncoding=UTF-8
 #sonar.exclusions=tests/**/*.spec.js
 sonar.tests=tests
 sonar.test.inclusions=tests/**/*.spec.ts
-sonar.coverage.exclusions=tests/**/*.spec.ts,tests/**/*.mock.ts,node_modules/*,helm-chart/*,pipeline/*,coverage/lcov-report/*,appinsights-logger.ts
+sonar.coverage.exclusions=tests/**/*.spec.ts,tests/**/*.mock.ts,node_modules/*,helm-chart/*,pipeline/*,coverage/lcov-report/*,src/**/appinsights-logger.ts
 sonar.dynamicAnalysis=reuseReports
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=reports/test-report.xml
