--- a/pipeline/steps-package-and-push-helm-charts.yaml
+++ b/pipeline/steps-package-and-push-helm-charts.yaml
@@ -1,23 +1,22 @@
 steps:
 
 - task: HelmDeploy@0
-  displayName: 'Helm Package'  
+  displayName: Helm package
   inputs:
     command: package
     chartPath: $(chartPath)
     chartVersion: $(Build.SourceBranchName)
-    arguments: '--app-version $(Build.SourceBranchName)'
     destination: $(Build.ArtifactStagingDirectory)
 
-# - task: HelmDeploy@0
-#   displayName: Helm save
-#   inputs:
-#     command: save
-#     chartNameForACR: 'charts/$(ACR.ContainerRepository):$(Build.BuildId)'
-#     chartPathForACR: $(Build.ArtifactStagingDirectory)/$(ACR.ContainerRepository)-$(Build.BuildId).tgz
-#     azureSubscriptionEndpointForACR: $(ACR.ServiceConnection)
-#     azureResourceGroupForACR: $(ACR.ResourceGroupName)
-#     azureContainerRegistry: $(ACR.ContainerRepository)
+- task: HelmDeploy@0
+  displayName: Helm save
+  inputs:
+    command: save
+    chartNameForACR: $(ACRName).azurecr.io/helm/$(ACR.ContainerRepository):$(Build.BuildId)
+    chartPathForACR: charts/$(ACR.ContainerRepository)
+    azureSubscriptionEndpointForACR: $(azureSubscriptionEndpointForACR)
+    azureResourceGroupForACR: $(ACR.ResourceGroupName)
+    azureContainerRegistry: $(ACR.ContainerRepository)
 
 # - task: AzureCLI@1
 #   inputs:
