--- a/pipeline/steps-package-and-push-helm-charts.yaml
+++ b/pipeline/steps-package-and-push-helm-charts.yaml
@@ -14,7 +14,7 @@ steps:
     command: save
     chartNameForACR: $(ACRName).azurecr.io/helm/$(ACR.ContainerRepository):$(Build.BuildId)
     chartPathForACR: charts/$(ACR.ContainerRepository)
-    azureSubscriptionEndpointForACR: $(azureSubscriptionEndpointForACR)
+    azureSubscriptionEndpointForACR: $(ACR.ServiceConnection)
     azureResourceGroupForACR: $(ACR.ResourceGroupName)
     azureContainerRegistry: $(ACR.ContainerRepository)
 
