--- a/ncea-fe/templates/serviceaccount.yaml
+++ b/ncea-fe/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "helm-chart.serviceAccountName" . }}
+  name: {{ include "ncea-fe.serviceAccountName" . }}
   labels:
-    {{- include "helm-chart.labels" . | nindent 4 }}
+    {{- include "ncea-fe.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
