updated pipeline yaml

--- a/ncea-fe/templates/serviceaccount.yaml
+++ b/ncea-fe/templates/serviceaccount.yaml
@@ -4,6 +4,7 @@ kind: ServiceAccount
 metadata:
   name: {{ include "ncea-fe.serviceAccountName" . }}
   labels:
+    azure.workload.identity/use: "true"
     {{- include "ncea-fe.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
