--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=public/**
 sonar.tests=__tests__
 sonar.test.inclusions=__tests__/**/*.spec.ts
-sonar.coverage.exclusions=__tests__/**/*.spec.ts,__tests__/**/*.mock.ts,node_modules/*,coverage/lcov-report/*,public/*
+sonar.coverage.exclusions=__tests__/**/*.spec.ts,__tests__/**/*.mock.ts,node_modules/*,coverage/lcov-report/*,public/*,src/infrastructure/plugins/appinsights-logger.ts
 sonar.dynamicAnalysis=reuseReports
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=reports/test-report.xml
