--- a/pipeline/steps-build-and-push-docker-images.yaml
+++ b/pipeline/steps-build-and-push-docker-images.yaml
@@ -6,17 +6,17 @@ steps:
     command: build
     containerRegistry: $(ACR.ServiceConnection)
     repository: $(ACR.ContainerRepository)
-    tags: $(Build.BuildId)
+    tags: '$(Build.BuildNumber)$(artifactNameSuffix)'
 
 - task: Docker@2
   displayName: 'Docker Push'
-  # condition: |
-  #   or(
-  #       and(and(succeeded(), eq(variables.isMaster, false)), eq(variables.isPullRequest, false)),
-  #       and(succeeded(), eq(variables.isMaster, true))
-  #     )  
+  condition: |
+    or(
+        and(and(succeeded(), eq(variables.isMaster, false)), eq(variables.isPullRequest, false)),
+        and(succeeded(), eq(variables.isMaster, true))
+      )  
   inputs:
     command: push
     containerRegistry: $(ACR.ServiceConnection)
     repository: $(ACR.ContainerRepository)
-    tags: $(Build.BuildId)
+    tags: '$(Build.BuildNumber)$(artifactNameSuffix)'
