--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -31,11 +31,11 @@ stages:
       - npm
 
     variables:
-      isMaster: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
+      isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
       isPullRequest: $[eq(variables['Build.Reason'], 'PullRequest')]
       branchSource: $[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]
       branch: $[replace(variables['branchSource'], '/', '-')]
-      ${{ if ne(variables.isMaster, 'true') }}:
+      ${{ if ne(variables.isMain, 'true') }}:
         artifactNameSuffix: _$(branch)
       ${{ else }}:
         artifactNameSuffix: ''
