updated pipeline yaml

--- a/pipeline/steps-package-and-push-helm-charts.yaml
+++ b/pipeline/steps-package-and-push-helm-charts.yaml
@@ -2,6 +2,7 @@ steps:
 
 - task: HelmDeploy@0
   displayName: Helm package
+  condition: and(succeeded(), eq(variables.isPullRequest, false))
   inputs:
     command: package
     chartPath: $(chartPath)
