--- a/pipeline/azure-pipelines.yaml
+++ b/pipeline/azure-pipelines.yaml
@@ -46,7 +46,22 @@ stages:
       - template: steps-build-and-push-docker-images.yaml
       - template: steps-package-and-push-helm-charts.yaml
 
-# - stage: 'Dev'
+# - stage: 'sandbox'
+#   displayName: 'Deploy to the sandbox environment'
+#   dependsOn: Build
+#   condition:  succeeded()
+#   jobs:
+#   - deployment: Deploy
+#     pool:
+#       vmImage: 'ubuntu-latest'
+#     environment: sandbox 
+#     strategy:
+#       runOnce:
+#         deploy:
+#           steps:
+#             - template: steps-deploy-helm-charts.yaml
+
+# - stage: 'dev'
 #   displayName: 'Deploy to the dev environment'
 #   dependsOn: Build
 #   condition:  succeeded()
@@ -55,6 +70,21 @@ stages:
 #     pool:
 #       vmImage: 'ubuntu-latest'
 #     environment: dev 
+#     strategy:
+#       runOnce:
+#         deploy:
+#           steps:
+#             - template: steps-deploy-helm-charts.yaml
+
+# - stage: 'test'
+#   displayName: 'Deploy to the test environment'
+#   dependsOn: dev
+#   condition:  succeeded()
+#   jobs:
+#   - deployment: Deploy
+#     pool:
+#       vmImage: 'ubuntu-latest'
+#     environment: test 
 #     strategy:
 #       runOnce:
 #         deploy:
