--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -13,14 +13,6 @@
 #     chartType: 'Name'
 #     chartName: '$(containerRegistry)/$(containerRepository)'
 #     releaseName: '$(containerRepository)'
+      # valueFile: values-${{ parameters.environment }}.yml
 #     overrideValues: 'ingress.basedomain=$(aksHostDev),image.tag=$(Build.BuildNumber),image.repository=$(containerRegistry).azurecr.io/$(containerRepository)'
 #     force: true
-
-#   - task: HelmDeploy@0
-#             inputs:
-#               connectionType: 'Kubernetes Service Connection'
-#               kubernetesServiceConnection: 'Staging-592588480'
-#               namespace: 'staging'
-#               command: 'upgrade'
-#               chartType: 'FilePath'
-#               chartPath: $(Build.ArtifactStagingDirectory)/server
