--- a/ncea-fe/templates/ingress.yaml
+++ b/ncea-fe/templates/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  ingressClassName: {{ $.Values.ingress.classname }}
+  ingressClassName: {{ $.Values.ingress.className }}
   rules:
   {{- range .Values.ingress.hosts }}
   - host: {{ .host | quote }}
