--- a/ncea-fe/values.sandbox.yaml
+++ b/ncea-fe/values.sandbox.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: nceapocsbox.azurecr.io/defra/ncea-fe
   pullPolicy: IfNotPresent
-  tag: "20240220.29_feature-298132-integerate-azure-appinsights"
+  tag: "20240220.30_feature-298132-integerate-azure-appinsights"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -13,10 +13,11 @@ serviceAccount:
   # Specifies whether a service account should be created
   create: false
   # Automatically mount a ServiceAccount's API credentials?
-  automount: true
+  automount: false
   # Annotations to add to the service account
   annotations:
     azure.workload.identity/client-id: "160e4bea-7717-47dc-aa04-6436d683494e"
+    azure.workload.identity/tenant-id: "770a2450-0227-4c62-90c7-4e38537f1102"
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: "serviceaccount-nceafrontend-sbox"
