--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,6 @@ dist
 *.sqlite
 /.vs
 /reports/test-report.xml
-src/infrastructure/log_files/*_log.*
-src/infrastructure/log_files/*.json
+log_files/*_log.*
+log_files/*.json
 __tests__/infrastructure/log_files/
