--- a/pipeline/steps-package-and-push-helm-charts.yaml
+++ b/pipeline/steps-package-and-push-helm-charts.yaml
@@ -9,15 +9,17 @@ steps:
     chartVersion: $(Build.SourceBranchName)
     destination: $(Build.ArtifactStagingDirectory)
 
-# - task: HelmDeploy@0
-#   displayName: Helm save
-#   inputs:
-#     command: save
-#     chartNameForACR: $(ACRName).azurecr.io/helm/$(ACR.ContainerRepository):$(Build.BuildId)
-#     chartPathForACR: charts/$(ACR.ContainerRepository)
-#     azureSubscriptionEndpointForACR: $(ACR.ServiceConnection)
-#     azureResourceGroupForACR: $(ACR.ResourceGroupName)
-#     azureContainerRegistry: $(ACR.ContainerRepository)
+- task: HelmDeploy@0
+  displayName: Helm save
+  inputs:
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceConnection: $(AKS.ServiceConnection)
+    command: save
+    chartNameForACR: 'charts/$(ACR.ContainerRepository):$(Build.BuildNumber)$(artifactNameSuffix)'
+    chartPathForACR:  $(chartPath)
+    azureSubscriptionEndpointForACR: $(ACR.ServiceConnection)
+    azureResourceGroupForACR: $(ACR.ResourceGroupName)
+    azureContainerRegistry: $(ACR.ContainerRepository)
 
 # - task: AzureCLI@1
 #   inputs:
