--- a/pipeline/steps-package-and-push-helm-charts.yaml
+++ b/pipeline/steps-package-and-push-helm-charts.yaml
@@ -6,7 +6,7 @@ steps:
   inputs:
     command: package
     chartPath: $(chartPath)
-    chartVersion: $(Build.BuildNumber)$(artifactNameSuffix)
+    chartVersion: $(Build.BuildNumber)
     destination: $(Build.ArtifactStagingDirectory)
 
 - task: HelmDeploy@0
@@ -15,7 +15,7 @@ steps:
     connectionType: 'Kubernetes Service Connection'
     kubernetesServiceConnection: aksServiceConn-AZR-NCE-SND1
     command: save
-    chartNameForACR: $(ACR.Name).azurecr.io/helm/$(ACR.ContainerRepository):$(Build.BuildNumber)$(artifactNameSuffix)
+    chartNameForACR: $(ACR.Name).azurecr.io/helm/$(ACR.ContainerRepository):$(Build.BuildNumber)
     chartPathForACR:  $(chartPath)
     azureResourceGroupForACR: $(ACR.ResourceGroupName)
     azureContainerRegistry: $(ACR.ContainerRepository)
