--- a/ncea-fe/values/values.local.yaml
+++ b/ncea-fe/values/values.local.yaml
@@ -8,6 +8,7 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: "ncea-search-frontend"
+hostName:
 
 serviceAccount:  
   create: false 
