--- a/pipeline/steps-deploy-helm-charts.yaml
+++ b/pipeline/steps-deploy-helm-charts.yaml
@@ -37,10 +37,10 @@ steps:
         image.repository=$(containerRepositoryFullPath)
         image.tag=$(imageTag)
         serviceAccount.name=$(serviceAccountHarvester)
-        env.port=$(port)
-        env.nodeEnv=$(nodeEnv)
-        env.keyVaultUri=$(keyVaultUri)
-        env.elasticSearchApi=$(elasticSearchApi)
+        env.PORT=$(port)
+        env.NODE_ENV=$(nodeEnv)
+        env.AZURE_KEYVAULT_URL=$(keyVaultUri)
+        env.ELASTICSEARCH_API=$(elasticSearchApi)
         hostName=$(hostName)
     install: true
     force: true
